# game

./: .gitignore  .vimspector.json  .ycm_extra_conf.py  CMakeLists.txt  NOTES.md  README.md
include/: input.h  log.h  platform.h
include/engine/: input.h  platform.h
include/engine/graphics/: color.h  font.h  graphics.h  image.h  renderer.h  shader.h  subtexture.h  texture.h
include/engine/maths/: calc.h  circ.h  collision.h  line.h  mat3x3.h  mat4x4.h  quad.h  rect.h  shape.h  vec2.h
include/engine/physics/: softbody.h
include/game/: game.h  player.h
include/graphics/: color.h  font.h  graphics.h  image.h  renderer.h  shader.h  simple_renderer.h  subtexture.h  texture.h
include/maths/: calc.h  mat3x3.h  mat4x4.h  rect.h  vec2.h
include/sb/: animator.h  boxcollider.h  bullet.h  charger.h  circlecollider.h  collider.h  collision.h  collisionmanager.h  collisionresolver.h  component.h  ecs.h  enemy.h  entity.h  game.h  mover.h  navigationmanager.h  pathfinder.h  physicsbody.h  player.h  scene.h  tilemap.h
res/aseprite/: charger.aseprite  concept.aseprite
src/: input.cpp  log.cpp  main.cpp  platform.cpp
src/engine/: input.cpp  log.cpp  platform.cpp
src/engine/graphics/: color.cpp  font.cpp  graphics.cpp  image.cpp  renderer.cpp  shader.cpp  subtexture.cpp  texture.cpp
src/engine/maths/: calc.cpp  circ.cpp  collision.cpp  line.cpp  mat3x3.cpp  mat4x4.cpp  quad.cpp  rect.cpp  vec2.cpp
src/game/: game.cpp
src/graphics/: color.cpp  font.cpp  graphics.cpp  image.cpp  renderer.cpp  shader.cpp  subtexture.cpp  texture.cpp
src/maths/: calc.cpp  mat3x3.cpp  mat4x4.cpp  rect.cpp  vec2.cpp
src/sb/: animator.cpp  boxcollider.cpp  bullet.cpp  charger.cpp  circlecollider.cpp  collider.cpp  collision.cpp  collisionmanager.cpp  collisionresolver.cpp  component.cpp  enemy.cpp  entity.cpp  game.cpp  mover.cpp  navigationmanager.cpp  pathfinder.cpp  physicsbody.cpp  player.cpp  scene.cpp  tilemap.cpp
